--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <body>
     <table cellspacing="20">
         <tr>
-          <td><img src="C:\web development\HTML- personal web site\images\el-shabab.png" alt="el shabab profile"></td>
+          <td><img src="images\el-shabab.png" alt="el shabab profile"></td>
           <td><h1>Hussaini Yusuf</h1>
           <p><em>I am student of <strong><a href="https://www.myschoolgist.com/ng/tag/httpwww-unimaid-edu-ng/">University of maiduguri!</a></em></strong></p>
-          <p>i am a web developer and learner, and ❤arabia coffe!</p></td>
+          <p>i am a web developer and learner, and I ❤arabia coffe!</p></td>
         </tr>
     </table>
     <hr>
